...
        if self.isLastQuestion() {
            let text = "Вы ответили на \(correctAnswers) из 10, попробуйте еще раз!"
            
            let viewModel = QuizResultsViewModel (
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть еще раз")
            viewController?.show(quiz: viewModel)
            stopTimer()
        } else {
            stopTimer()
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
